Auto init removed from JS

--- a/index.html
+++ b/index.html
@@ -352,6 +352,9 @@
     </div>
     </div>
     <script>
+        $(document).ready(function(){
+            Ethplorer.init();
+        });
         if(Ethplorer.Config.ga){
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
