Main page css updated

--- a/index.htm
+++ b/index.htm
@@ -150,7 +150,7 @@
                                         <a href="/last" style="visibility: hidden;font-size:16px;color:#47C2FF !important;text-decoration: none !important;">view more...</a>
                                     </div>
                                     <div class="t269__hint t-descr t-descr_xxs" field="text" style="margin-top:50px;">
-                                        <span style="font-weight: 400;">
+                                        <span style="font-weight: 400;opacity:0.6;">
                                             Do you need to view 
                                             <a href="https://ethplorer.io/tx/0xbfbf64b792a1416a501cb4234a667be66a8a4dfaa460d703a15678545ff27811" style="color: white;"><u>custom data</u></a> 
                                             or non-standart token? 
