Page layout updated

--- a/index.htm
+++ b/index.htm
@@ -149,8 +149,8 @@
                                     <div class="t269__hint t-descr t-descr_xxs txs-viewmore" field="text" style="margin-top:-53px;">
                                         <a href="/last" style="visibility: hidden;font-size:16px;color:#47C2FF !important;text-decoration: none !important;">view more...</a>
                                     </div>
-                                    <div class="t269__hint t-descr t-descr_xxs" field="text" style="margin-top:50px;">
-                                        <span style="font-weight: 400;opacity:0.6;">
+                                    <div class="t269__hint t-descr t-descr_xxs" field="text" style="margin-top:50px;opacity:0.6;">
+                                        <span style="font-weight: 400;">
                                             Do you need to view 
                                             <a href="https://ethplorer.io/tx/0xbfbf64b792a1416a501cb4234a667be66a8a4dfaa460d703a15678545ff27811" style="color: white;"><u>custom data</u></a> 
                                             or non-standart token? 
@@ -160,14 +160,8 @@
                                             <strong>Donation addresses: </strong><br />
                                             <strong>ETH</strong>: 0x0dE0BCb0703ff8F1aEb8C892eDbE692683bD8030 <br />
                                             <strong>BTC</strong>: 1MKVGqyJA9YkVRuDsGCvnYVJ6ivNtfe289 <br /><br />
-                                            <strong>Crafted with </strong>
                                         </span>
-                                        <a href="https://github.com/everexIO/CryptoKit">
-                                            <span style="color: rgb(16, 129, 192);">
-                                                <strong><u data-redactor-tag="u">Everex/CryptoKit</u></strong>
-                                            </span>
-                                        </a>
-                                        <br /><br /><br /><br />
+                                        <br /><br />
                                     </div>
                                 </div>
                             </div>
