--- a/index.htm
+++ b/index.htm
@@ -96,8 +96,7 @@
                             <div class="t-cover__wrapper t-valign_middle" style="height:96vh;  position: relative;z-index: 1;"> 
                                 <div class="t269__mainwrapper" data-hook-content="covercontent">
                                     <h1 class="t269__title t-title t-title_lg" style="" field="title">
-                                        Ethereum token viewer<br />
-                                        <span style="font-size: 16px;">beta version</span>
+                                        Ethereum token viewer
                                     </h1>
                                     <div class="t269__descr t-descr t-descr_xs" style="" field="descr">
                                         View tokens developed with ethereum <a href="https://github.com/ethereum/EIPs/issues/20"><span style="color: rgb(16, 133, 198);"><u data-redactor-tag="u">ERC20 standard</u></span></a><br />
