--- a/last.html
+++ b/last.html
@@ -84,7 +84,7 @@
                 <div id="page-create" class="page">
                     <div class="row">
                         <div class="col-xs-12 text-center">
-                            <h1 style="color:white;">Last Ethereum token transactions</h1>
+                            <h1 style="color:white;">Recent Ethereum token transactions</h1>
                             <span style="color:white;">refreshing in real-time</span>
                             <div id="ethplorer-txs"></div>
                         </div>
