--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             </tr>                                
                             <tr>
                                 <td>Creator</td>
-                                <td id="address-contract-creator" data-type="ethplorer" class="list-field"></td>
+                                <td id="address-contract-creator" data-type="ethplorer" data-options="no-contract" class="list-field"></td>
                             </tr>
                             <tr>
                                 <td>Balance</td>
