--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="/js/bignumber.js?v=2"></script>
-    <script src="/js/ethplorer.js?v=2"></script>
-    <script src="/cfg/config.ethplorer.js"></script>
+    <script src="/js/bignumber.js?v=3"></script>
+    <script src="/js/ethplorer.js?v=3"></script>
+    <script src="/cfg/config.ethplorer.js?v=3"></script>
 </head>
 <body>
     <div style="position: relative; min-height: 100vh;">
