--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="/js/bignumber.js?v=5"></script>
-    <script src="/js/ethplorer.js?v=5"></script>
+    <script src="/js/bignumber.js?v=6"></script>
+    <script src="/js/ethplorer.js?v=6"></script>
     <script src="/cfg/config.ethplorer.js?v=3"></script>
 </head>
 <body>
@@ -295,13 +295,6 @@
                             </table>                           
                         </div>                        
                     </div>
-                    <div class="col-xs-12" id="address-issuances">
-                        <div class="block">
-                            <div class="block-header"><h3>Token <span class="address-token-name"></span> Issuances</h3></div>
-                            <table class="table"></table>
-                        </div>
-                        <small>* all dates are displayed for <span class="local-time-offset"></span> timezone</small>
-                    </div>
                     <div class="col-xs-12" id="address-token-transfers" style="display:none;">
                         <div class="block">
                             <div class="block-header"><h3>Token <span class="address-token-name"></span> Transfers</h3></div>
@@ -312,9 +305,16 @@
                     </div>
                     <div class="col-xs-12" id="address-transfers" style="display:none;">
                         <div class="block">
-                            <div class="block-header"><h3>Last 50 Transfers</h3></div>
+                            <div class="block-header"><h3>Operations</h3></div>
                             <table class="table"></table>
                             <div id="address-transfers-more" class="text-center"></div>
+                        </div>
+                        <small>* all dates are displayed for <span class="local-time-offset"></span> timezone</small>
+                    </div>
+                    <div class="col-xs-12" id="address-issuances">
+                        <div class="block">
+                            <div class="block-header"><h3>Token <span class="address-token-name"></span> Issuances</h3></div>
+                            <table class="table"></table>
                         </div>
                         <small>* all dates are displayed for <span class="local-time-offset"></span> timezone</small>
                     </div>
