Block header changed

--- a/index.htm
+++ b/index.htm
@@ -77,7 +77,7 @@
                     ethplorerWidget.init('#ethplorer-txs', 'last', {
                         onLoad: function(){
                             $('.txs-viewmore a').css('visibility', 'visible');
-                            $('.txs-header').html('<a href="/last" class="underline-onhover">Latest token transactions</a>')
+                            $('.txs-header').html('<a href="/last" class="underline-onhover">Recent token transactions</a>')
                         }
                     });                    
                 });
