--- a/index.htm
+++ b/index.htm
@@ -216,8 +216,8 @@
                                 <ul class="t389__list">
                                     <li class="t389__list_item t-name t-name_xs"><a class="t389__typo" style="color: #ffffff" href="about.html"  data-menu-item-number="1">About</a></li>
                                     <li class="t389__list_item t-name t-name_xs"><a class="t389__typo" style="color: #ffffff" href="about.html#disqus_thread"  data-menu-item-number="2">Discuss ethplorer</a></li>
-                                    <li class="t389__list_item t-name t-name_xs"><a class="t389__typo" style="color: #ffffff" href="https://github.com/EverexIO/Ethplorer" target="_blank" data-menu-item-number="3">Source code</a></li>
-
+                                    <li class="t389__list_item t-name t-name_xs"><a class="t389__typo" style="color: #ffffff" href="https://github.com/EverexIO/Ethplorer" target="_blank" data-menu-item-number="3">Sources</a></li>
+                                    <li class="t389__list_item t-name t-name_xs"><a class="t389__typo" style="color: #ffffff" href="https://github.com/EverexIO/Ethplorer/wiki/Ethplorer-API" target="_blank" data-menu-item-number="3">API</a></li>
                                 </ul>
                             </div>
                         </div>
