--- a/last.html
+++ b/last.html
@@ -99,7 +99,9 @@
                         &nbsp;&nbsp;&nbsp;
                         <a href="/about.html#disqus_thread"  style="color: white;">Discuss ethplorer</a>
                         &nbsp;&nbsp;&nbsp;
-                        <a href="https://github.com/EverexIO/Ethplorer" target="_blank">Source code</a>
+                        <a href="https://github.com/EverexIO/Ethplorer" target="_blank">Sources</a>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="https://github.com/EverexIO/Ethplorer/wiki/Ethplorer-API" target="_blank">API</a>
                 </div>
                 <div class="copyrights">
                     <span style="color:white;">(c) 2016</span> <a href="https://everex.one" target="_blank">Everex</a>
