Token widget updated

--- a/index.htm
+++ b/index.htm
@@ -74,7 +74,7 @@
                 $(document).ready(function () {
                     t454_highlight();
                     t454_setBg('11846335');
-                    ethplorerWidget.init('#ethplorer-txs', 'last', {
+                    ethplorerWidget.init('#ethplorer-txs', 'tokenHistory', {
                         onLoad: function(){
                             $('.txs-viewmore a').css('visibility', 'visible');
                             $('.txs-header').html('<a href="/last" class="underline-onhover">Recent token transactions</a>')
