--- a/last.html
+++ b/last.html
@@ -113,7 +113,7 @@
     </div>
     <script type="text/javascript">
         $(document).ready(function () {
-            ethplorerWidget.init('#ethplorer-txs', 'last', {limit: 50});                    
+            ethplorerWidget.init('#ethplorer-txs', 'tokenHistory', {limit: 50});                    
         });
         if(Ethplorer.Config.ga){
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
