Widget inclusion updated

--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
         <script src="js/tilda-blocks-2.4.js?t=1481025753"></script>	
         <script src="js/tilda-zoom-1.0.min.js"></script>
         <script src="js/tilda-forms-1.0.js"></script>
-        <script src="api/widget.js"></script>        
+        <script src="https://api.ethplorer.io/widget.js?v=1"></script>
     </head>
 <body class="t-body" style="margin:0;">
     <div id="allrecords" class="t-records" data-hook="blocks-collection-content-node" data-tilda-project-id="11344" data-tilda-page-id="226253" data-tilda-page-alias="ethplorer" >
