--- a/last.html
+++ b/last.html
@@ -19,7 +19,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="/js/ethplorer.js"></script>
     <script src="/cfg/config.ethplorer.js"></script>
-    <script src="/api/widget.js"></script>
+    <script src="https://api.ethplorer.io/widget.js?v=1"></script>
     <style>
         body {
             background-image: url(images/tild6336-3830-4566-a432-666261323761__bridgeout.jpg);
