--- a/top.html
+++ b/top.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="https://api.ethplorer.io/widget.js?v=4"></script>
+    <script src="https://api.ethplorer.io/widget.js?v=5"></script>
     <style>
         body {
             background-color: #333;
@@ -26,6 +26,9 @@
             text-align: right;
             padding-right: 10px;
             color: #8a8c85 !important;
+        }
+        #ethplorer-top .tx-unknown {
+            color: #676767 !important;
         }
     </style>
 </head>
