Terms and footer

--- a/about.html
+++ b/about.html
@@ -68,7 +68,8 @@
                     <div class="t389__content">
                         <div class="t389__col t389__col_hiddenmobile">
                             <div class="t389__typo t389__copyright t-name t-name_xs" field="text" style="color: #ffffff">
-                                (c) 2016 <a href="https://everex.one" target="_blank"><span style="color: rgb(16, 134, 199);"><u>Everex</u></span></a>, <a href="mailto:mailto://support@ethplorer.io"><span style="color: rgb(16, 134, 199);"><u>support@ethplorer.io</u></span></a>
+                                (c) 2016 <a href="https://everex.one" target="_blank"><span style="color: rgb(16, 134, 199);"><u>Everex</u></span></a>, <a href="mailto:mailto://support@ethplorer.io"><span style="color: rgb(16, 134, 199);"><u>support@ethplorer.io</u></span></a><br>
+                                <a href="/privacy.html"><span style="color: rgb(16, 134, 199);"><u>Privacy & Terms</u></span></a>
                             </div>
                         </div>
                         <div class="t389__col t389__col_center t-align_center">
@@ -78,13 +79,13 @@
                                     <li class="t389__list_item t-name t-name_xs"><a class="t389__typo" style="color: #ffffff" href="about.html#disqus_thread"  data-menu-item-number="2">Discuss ethplorer</a></li>
                                     <li class="t389__list_item t-name t-name_xs"><a class="t389__typo" style="color: #ffffff" href="https://github.com/EverexIO/Ethplorer" target="_blank" data-menu-item-number="3">Sources</a></li>
                                     <li class="t389__list_item t-name t-name_xs"><a class="t389__typo" style="color: #ffffff" href="https://github.com/EverexIO/Ethplorer/wiki/Ethplorer-API" target="_blank" data-menu-item-number="3">API</a></li>
-
                                 </ul>
                             </div>
                         </div>
                         <div class="t389__col t389__col_mobile">
                             <div class="t389__typo t389__copyright t-name t-name_xs" field="text" style="color: #ffffff">
-                                (c) 2016 <a href="https://everex.one" target="_blank"><span style="color: rgb(16, 134, 199);"><u>Everex</u></span></a>, <a href="mailto:mailto://support@ethplorer.io"><span style="color: rgb(16, 134, 199);"><u>support@ethplorer.io</u></span></a>
+                                (c) 2016 <a href="https://everex.one" target="_blank"><span style="color: rgb(16, 134, 199);"><u>Everex</u></span></a>, <a href="mailto:mailto://support@ethplorer.io"><span style="color: rgb(16, 134, 199);"><u>support@ethplorer.io</u></span></a><br>
+                                <a href="/privacy.html"><span style="color: rgb(16, 134, 199);"><u>Privacy & Terms</u></span></a>
                             </div>
                         </div>
                         <div class="t389__col">
