--- a/index.htm
+++ b/index.htm
@@ -208,7 +208,8 @@
                     <div class="t389__content">
                         <div class="t389__col t389__col_hiddenmobile">
                             <div class="t389__typo t389__copyright t-name t-name_xs" style="color: #ffffff">
-                                (c) 2016 <a href="https://everex.one" target="_blank"><span style="color: rgb(16, 134, 199);"><u>Everex</u></span></a>, <a href="mailto:mailto://support@ethplorer.io"><span style="color: rgb(16, 134, 199);"><u>support@ethplorer.io</u></span></a>
+                                (c) 2016 <a href="https://everex.one" target="_blank"><span style="color: rgb(16, 134, 199);"><u>Everex</u></span></a>, <a href="mailto:mailto://support@ethplorer.io"><span style="color: rgb(16, 134, 199);"><u>support@ethplorer.io</u></span></a><br>
+                                <a href="/privacy.html"><span style="color: rgb(16, 134, 199);"><u>Privacy & Terms</u></span></a>
                             </div>
                         </div>
                         <div class="t389__col t389__col_center t-align_center">
@@ -223,7 +224,8 @@
                         </div>
                         <div class="t389__col t389__col_mobile">
                             <div class="t389__typo t389__copyright t-name t-name_xs" style="color: #ffffff">
-                                (c) 2016 <a href="https://everex.one" target="_blank"><span style="color: rgb(16, 134, 199);"><u>Everex</u></span></a>, <a href="mailto:mailto://support@ethplorer.io"><span style="color: rgb(16, 134, 199);"><u>support@ethplorer.io</u></span></a>
+                                (c) 2016 <a href="https://everex.one" target="_blank"><span style="color: rgb(16, 134, 199);"><u>Everex</u></span></a>, <a href="mailto:mailto://support@ethplorer.io"><span style="color: rgb(16, 134, 199);"><u>support@ethplorer.io</u></span></a><br>
+                                <a href="/privacy.html"><span style="color: rgb(16, 134, 199);"><u>Privacy & Terms</u></span></a>
                             </div>
                         </div>
                         <div class="t389__col">
