--- a/index.htm
+++ b/index.htm
@@ -146,7 +146,7 @@
                                                     $('.txs-header').html('<a href="/last" class="underline-onhover">Recent token transactions</a>')
                                                 }
                                             });
-                                            ethplorerWidget.init('#ethplorer-daily', 'dailyTX', {'type': 'area'});
+                                            ethplorerWidget.init('#ethplorer-daily', 'dailyTX', {"period": 90, 'type': 'area'});
                                         });
                                     </script>
                                     <div class="t269__hint t-descr t-descr_xxs" field="text" style="margin-top:50px;opacity:0.6;">
