--- a/index.htm
+++ b/index.htm
@@ -129,7 +129,7 @@
                                     <div class="t269__hint t-descr t-descr_xxs txs-viewmore" field="text" style="margin-top:-53px;">
                                         <a href="/last" style="visibility: hidden;font-size:16px;color:#47C2FF !important;text-decoration: none !important;">view more...</a>
                                     </div>
-                                    <div class="widget-txs" style="padding-bottom: 0px; margin-bottom: 0px;"><div class="txs-header">Ethereum Tokens Pulse</div></div>
+                                    <div class="widget-txs" style="padding-bottom: 0px; margin-bottom: 0px;"><div class="txs-daily-header">Ethereum Tokens Pulse</div></div>
                                     <div id="ethplorer-daily" style="padding-top: 0px; margin-top: 0px;"></div>
                                     <script type="text/javascript">
                                         $(document).ready(function () {
