--- a/index.htm
+++ b/index.htm
@@ -147,7 +147,7 @@
                                                     $('.txs-header').html('<a href="/last" class="underline-onhover">Recent token transactions</a>')
                                                 }
                                             });
-                                            ethplorerWidget.init('#ethplorer-daily', 'dailyTX', {'period': 90, 'type': 'area', options: {'title': ''}});
+                                            ethplorerWidget.init('#ethplorer-daily', 'dailyTX', {'period': 90, 'type': 'area', options: {'title': '', 'pointSize': 3}});
                                         });
                                     </script>
                                     <div class="t269__hint t-descr t-descr_xxs" field="text" style="margin-top:50px;opacity:0.6;">
