--- a/index.htm
+++ b/index.htm
@@ -129,8 +129,8 @@
                                     <div class="t269__hint t-descr t-descr_xxs txs-viewmore" field="text" style="margin-top:-53px;">
                                         <a href="/last" style="visibility: hidden;font-size:16px;color:#47C2FF !important;text-decoration: none !important;">view more...</a>
                                     </div>
-                                    <div class="widget-txs" style="padding-bottom: 0px; margin-bottom: 0px;"><div class="txs-daily-header">Ethereum Tokens Pulse</div></div>
-                                    <div id="ethplorer-daily" style="padding-top: 0px; margin-top: 0px;"></div>
+                                    <div class="widget-txs" style="padding-bottom: 0px; margin-bottom: 0px;"><div class="token-history-grouped-header">Ethereum Tokens Pulse</div></div>
+                                    <div id="token-history-grouped" style="padding-top: 0px; margin-top: 0px;"></div>
                                     <script type="text/javascript">
                                         $(document).ready(function () {
                                             t454_highlight();
@@ -147,7 +147,7 @@
                                                     $('.txs-header').html('<a href="/last" class="underline-onhover">Recent token transactions</a>')
                                                 }
                                             });
-                                            ethplorerWidget.init('#ethplorer-daily', 'dailyTX', {'period': 90, 'type': 'area', options: {'title': '', 'pointSize': 0, 'hAxis': {'title': '90 days token operations chart', 'titleTextStyle': {'color': '#B0B0B0', 'italic': false}}, 'vAxis': {'title': 'Token operations', 'titleTextStyle': {'color': '#B0B0B0', 'italic': false}}}});
+                                            ethplorerWidget.init('#token-history-grouped', 'tokenHistoryGrouped', {'period': 90, 'type': 'area', options: {'title': '', 'pointSize': 0, 'hAxis': {'title': '90 days token operations chart', 'titleTextStyle': {'color': '#B0B0B0', 'italic': false}}, 'vAxis': {'title': 'Token operations', 'titleTextStyle': {'color': '#B0B0B0', 'italic': false}}}});
                                         });
                                     </script>
                                     <div class="t269__hint t-descr t-descr_xxs" field="text" style="margin-top:50px;opacity:0.6;">
