Widget css fixed.

--- a/index.htm
+++ b/index.htm
@@ -128,7 +128,7 @@
                                             </div>
                                         </div>  
                                     </form>
-                                    <div id="ethplorer-txs" style="padding-bottom:50px !important;"></div>
+                                    <div id="ethplorer-txs" style="padding-bottom:50px !important;margin-top: 32px;margin-bottom: 16px;"></div>
                                     <div class="t269__hint t-descr t-descr_xxs txs-viewmore" field="text" style="margin-top:-53px;">
                                         <a href="/last" style="visibility: hidden;font-size:16px;color:#47C2FF !important;text-decoration: none !important;">view more...</a>
                                     </div>
